# taming-pyspark

./: .gitignore  README.md  pyproject.toml
src/: config.py  fake_friends.py  ratings-counter.py
src/friends/: fake_friends_df.py  fake_friends_rdd.py
src/utils/: list_to_map.py  rdd_line_parser.py
taming_pyspark/: config.py
taming_pyspark/book/: word_count_df.py  word_count_rdd.py  word_count_regex_df.py  word_count_regex_rdd.py
taming_pyspark/consumer_spending/: spending_df.py  spending_rdd.py
taming_pyspark/friends/: fake_friends_df.py  fake_friends_rdd.py
taming_pyspark/heroes/: most_popular_hero.py
taming_pyspark/movies/: most_watched.py  ratings_counter.py  recommendation.py
taming_pyspark/streams/: stream_logs.py
taming_pyspark/temp_1800s/: min_max_temp_df.py  min_max_temp_rdd.py  min_temp_df.py  min_temp_rdd.py
taming_pyspark/utils/: rdd_line_parser.py  regular_expressions.py  spark_runner.py
tests/unit/: test_list_to_map.py  test_rdd_line_parser.py
