[tool.poetry]
name = "taming-pyspark"
version = "0.1.0"
description = "Learning to use pyspark"
authors = ["Uadi"]

[tool.poetry.dependencies]
python = "^3.6"
pyspark = "^3.0.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
behave = "^1.2.6"
pyspark-stubs = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
