[tool.poetry]
name = "taming_pyspark"
version = "0.1.0"
description = "Lessons to learn pyspark"
authors = ["Ydot19"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.0.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
black = "^20.8b1"
behave = "^1.2.6"
pyspark-stubs = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
